<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutpas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <com.ytint.wloaa.widget.TitleBar
        android:id="@+id/title_barp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/titlebar" >
    </com.ytint.wloaa.widget.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewPwdOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_old_password"
            android:textColor="@color/content"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/old_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|top"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_selector"
            android:drawablePadding="10dp"
            android:gravity="bottom"
            android:hint="@string/login_userpass_hint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/register_hint_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewPwd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_new_password"
            android:textColor="@color/content"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/new_pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|top"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_selector"
            android:drawablePadding="10dp"
            android:gravity="bottom"
            android:hint="@string/login_userpass_hint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/register_hint_textsize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewPwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_again_password"
            android:textColor="@color/content"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/new_pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|top"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext_selector"
            android:drawablePadding="10dp"
            android:gravity="bottom"
            android:hint="@string/login_userpass_hint"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/register_hint_textsize" />
    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="fill"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_password_sure"
        android:textSize="15dp" />

</LinearLayout>